--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,12 @@
 <IfModule mod_expires.c>
     ExpiresByType text/css                  "access plus 1 hour"
 </IfModule>
+<filesMatch "\.(html|htm|js|css)$">
+  FileETag None
+  <ifModule mod_headers.c>
+     Header unset ETag
+     Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+     Header set Pragma "no-cache"
+     Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
+  </ifModule>
+</filesMatch>
